# Homework-3-python-WEB-DJANGO

./: .flake8  README.md  config.py  pyproject.toml
src/: catalog.html  category.html  contacts.html  main.html  web_app.py
