[tool.poetry]
name = "homework-3-python-web-django"
version = "0.1.0"
description = ""
authors = ["Maksim Lakovich <maks.lakovich@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "import",
    "from",
    "@abstractmethod"
]

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'

[tool.black]
line-length = 119
exclude = ".git"

[tool.isort]
line_length = 119